--- a/08-dom-soal-1.html
+++ b/08-dom-soal-1.html
@@ -195,6 +195,8 @@
                 var cardsrc = cardImg.getAttribute("src")
                 var modalsrc = modalImg.setAttribute("src", cardsrc)
                 
+                modalTitle.innerHTML = cardTitle.innerHTML
+                modalText.innerHTML = cardText.innerHTML
                 // modalImg = cardImg
 
                 // cardTitle.setAttribute(`.modal-title`)
