--- a/08-dom-soal-2.html
+++ b/08-dom-soal-2.html
@@ -169,6 +169,10 @@
       const addNone = document.querySelector(".btn")
 
       
+      elBtnComment.addEventListener("click", showComment)
+      elBtnCancel.addEventListener("click", cancelComment)
+      elBtnSubmit.addEventListener("submit", submitComment)
+
       // EDIT HERE
 
     </script>
